# token-router

./: .gitignore  Cargo.toml  DESIGN.md  README.md  router.toml
src/: cascade.rs  config.rs  context.rs  handlers.rs  kv_cache.rs  lib.rs  main.rs  spec_decode.rs  stream.rs
src/backend/: client.rs  mod.rs
src/strategy/: cascade.rs  content.rs  mod.rs  passthrough.rs  performance.rs  spec_decode.rs
tests/: integration_test.rs  test_singlecore_gemm  test_singlecore_gemm.cpp  validate_engine.py
