[package]
name = "token-router"
version = "0.1.0"
edition = "2021"
description = "Token-level router for multi-backend LLM inference — route individual tokens to NPU, GPU, or any OpenAI-compatible backend"
license = "MIT"
repository = "https://github.com/bong-water-water-bong/token-router"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "charset", "http2"] }
hyper = { version = "1", default-features = false, features = ["http1", "http2", "server"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
toml = "0.8"
thiserror = "2"
anyhow = "1"
dashmap = "6"
uuid = { version = "1", features = ["v4"] }
futures = "0.3"
pin-project = "1"
bytes = "1"
async-trait = "0.1"
tokio-stream = "0.1"

[[bin]]
name = "npu-server"
path = "src/bin/npu-server.rs"
